<resources>

    <string name="app_name">Virtual Market</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_user_first">Virtual Market App</string>
    <string name="title_activity_user__login">User log in screen</string>
    <string name="txt_email">Enter your email</string>
    <string name="txt_pass">Enter your password</string>
    <string name="txt_login_screen">Login with your account</string>
    <string name="txt_login_btn">Log In</string>
    <string name="txt_signup_btn">Register</string>
    <string name="title_activity_user__signup">User_Signup</string>
    <string name="title_activity_user__main">User_MainActivity</string>
    <string name="title_activity_smsvalidate">SMSValidate</string>
    <string name="txt_signup_screen">Registeration</string>
    <string name="txt_phone">Enter you mobile number</string>
    <string name="txt_username">Enter your user name</string>
    <string name="txt_validate_message">Please enter the validaton code</string>
    <string name="txt_validate_button">Validate</string>
    <string name="title_activity_item__scanning">Item_Scanning</string>
    <string name="title_activity_user__reports">User_Reports</string>
    <string name="title_activity_historical__data">Historical_Data</string>
    <string name="title_activity_shopping_cart">Shopping Cart</string>

</resources>